#90 first cleanup